@@ -43,7 +43,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
               @Override
               public J visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext ctx) {
                   return method.getBody() != null && JavaTemplate.matches("System.out.println(1);",
-                    new Cursor(new Cursor(getCursor(), method.getBody()), method.getBody().getStatements().get(0))) ?
+                    new Cursor(new Cursor(getCursor(), method.getBody()), method.getBody().getStatements().getFirst())) ?
                     JavaTemplate.apply("System.out.println(2);", getCursor(), method.getCoordinates().replaceBody()) :
                     super.visitMethodDeclaration(method, ctx);
               }
@@ -72,7 +72,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations vd, ExecutionContext ctx) {
-                  if (vd.getVariables().size() == 1 && vd.getVariables().get(0).getSimpleName().equals("i")) {
+                  if (vd.getVariables().size() == 1 && vd.getVariables().getFirst().getSimpleName().equals("i")) {
                       return JavaTemplate.apply("Integer i = 2;", getCursor(), vd.getCoordinates().replace());
                   }
                   return super.visitVariableDeclarations(vd, ctx);
@@ -166,10 +166,10 @@ class JavaTemplateContextFreeTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
+                  if (multiVariable.getVariables().getFirst().getSimpleName().equals("o")) {
                       return JavaTemplate.builder("var o = #{any()};")
                         .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -276,10 +276,10 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
+                  if (multiVariable.getVariables().getFirst().getSimpleName().equals("o")) {
                       return JavaTemplate.builder("var o = #{any()};")
                         .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -316,10 +316,10 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
+                  if (multiVariable.getVariables().getFirst().getSimpleName().equals("o")) {
                       return JavaTemplate.builder("var o = #{any()};")
                         .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -358,10 +358,10 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
+                  if (multiVariable.getVariables().getFirst().getSimpleName().equals("o")) {
                       return JavaTemplate.builder("var o = #{any()};")
                         .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
