@@ -672,7 +672,7 @@ class MethodInvocationTest implements RewriteTest {
             spec -> spec.afterRecipe(cu -> {
                 assertThat(((J.VariableDeclarations) cu.getStatements().get(cu.getStatements().size() - 1))).satisfies(
                     z ->
-                        assertThat(((J.MethodInvocation) z.getVariables().get(0).getInitializer())).satisfies(
+                        assertThat(((J.MethodInvocation) z.getVariables().getFirst().getInitializer())).satisfies(
                             get -> {
                                 assertThat(get.getMarkers().findFirst(IndexedAccess.class)).isPresent();
                                 assertThat(((J.Identifier) get.getSelect()).getSimpleName()).isEqualTo("surface");
